--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = A Rails App to collect New York Times news items
 
-This application uses the New York Times API to collect the latest news items.
+This application uses <b>the New York Times Newswire API</b> to collect the latest news items.
 A cron job is set up using the 'whenever' gem, it runs
   rake newswire:collect
 every 20 minutes.
@@ -15,11 +15,11 @@ One potential use of pre-categorized texts is as training data for building
 models for machine learning/text mining tools like LIBSVM (the most popular C++
 implementation of Support Vector Machines).
 
-The Ruby interface for the LIBSVM C++ library is available here:
+The <b>Ruby interface for the LIBSVM C++ library</b> is available here:
   http://github.com/tomz/libsvm-ruby-swig/tree/master
 
 The power of <b>Convention over Configuration</b> is demonstrated here, there are less
-than 80 lines of Ruby code in lib/task/newswire.rake including the setup code and
+than 80 lines of <b>Ruby</b> code in lib/task/newswire.rake including the setup code and
 comments and blank lines.  To achieve the same in <b>Java</b> would require code that is
 <b>mind-boggling</b> and <b>ugly</b>.
 
@@ -45,7 +45,9 @@ comments and blank lines.  To achieve the same in <b>Java</b> would require code
     every 20.minutes do
       rake "newswire:collect", :environment => "development"
     end
-- and you can optionally run 'rake newswire:test' to test without the API key
+- and you can optionally run:
+    rake newswire:test'
+  to test without the API key
 - now relax and watch your tables get filled up with New York Times news items
 
 == Author
@@ -53,6 +55,7 @@ comments and blank lines.  To achieve the same in <b>Java</b> would require code
 Tom Zeng
 
 http://www.tomzconsulting.com 
-http://www.linkedin.com/in/tomzeng 
-tom.z.zeng _at_ gmail _dot_ com
 
+http://www.linkedin.com/in/tomzeng 
+
+tom.z.zeng _at_ gmail _dot_ com
