minor re-wording

--- a/README.rdoc
+++ b/README.rdoc
@@ -15,13 +15,13 @@ One potential use of pre-categorized texts is as training data for building
 models for machine learning/text mining tools like LIBSVM (the most popular C++
 implementation of Support Vector Machines).
 
-The <b>Ruby interface for the LIBSVM C++ library</b> is available here:
+The <b>Ruby interface for the LIBSVM C++ library</b> is available at:
   http://github.com/tomz/libsvm-ruby-swig/tree/master
 
 The power of <b>Convention over Configuration</b> is demonstrated here, there are less
-than 80 lines of <b>Ruby</b> code in lib/task/newswire.rake including the setup code and
-comments and blank lines.  To achieve the same in <b>Java</b> would require code that is
-<b>mind-boggling</b> and <b>ugly</b>.
+than 80 lines of <b>Ruby</b> code in lib/task/newswire.rake including the setup code,
+comments, and blank lines.  To achieve the same in <b>Java</b> would require code that is
+both <b>mind-boggling</b> and <b>ugly</b>.
 
 == Installation
 
