--- a/README.rdoc
+++ b/README.rdoc
@@ -50,7 +50,8 @@ both _mind_-_boggling_ and _ugly_.
 - and you can optionally run:
     rake newswire:test
   to test without the API key
-- now relax and watch your tables get filled up with New York Times news items
+- now relax and watch your tables get filled up with New York Times news items:
+    tail -100f log/collect.log
 
 == Author
 
